[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/audio/lake/Lake Song.ogg" type="AudioStream" id=1]
[ext_resource path="res://assets/menus/main/Moon_logo_trans.png" type="Texture" id=2]
[ext_resource path="res://assets/menus/main/space-bg.jpg" type="Texture" id=3]
[ext_resource path="res://assets/menus/main/gwj48wildcards.png" type="Texture" id=4]
[ext_resource path="res://menus/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://assets/menus/main/flying-frog-logo-text.png" type="Texture" id=6]
[ext_resource path="res://assets/menus/main/gwj48moon.png" type="Texture" id=7]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Label:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Label:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Label:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Label:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "hide"
length = 0.6
tracks/0/type = "bezier"
tracks/0/path = NodePath("Label:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Label:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Label:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Label:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="Animation" id=8]
resource_name = "show"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath("Label:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Label:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Label:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Label:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Luna-logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 519, 111 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Luna-logo:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.104489, 0.104489 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "bob"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Luna-logo:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 519, 105 ), Vector2( 519, 115 ), Vector2( 519, 105 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("BlackScreen:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.772549, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BlackScreen:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.811765, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("BlackScreen:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("BlackScreen:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("BlackScreen/Theme:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("BlackScreen/Theme:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("BlackScreen/Theme:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("BlackScreen/Theme:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("BlackScreen/Wildcards:modulate:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("BlackScreen/Wildcards:modulate:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("BlackScreen/Wildcards:modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("BlackScreen/Wildcards:modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("BlackScreen/Logo:modulate:r")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("BlackScreen/Logo:modulate:g")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("BlackScreen/Logo:modulate:b")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("BlackScreen/Logo:modulate:a")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/16/type = "value"
tracks/16/path = NodePath("BlackScreen:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("BlackScreen:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "cards"
length = 7.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("BlackScreen:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.772549, -0.25, 0, 0.25, 0, 0.772549, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 5.5, 6.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BlackScreen:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.811765, -0.25, 0, 0.25, 0, 0.811765, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 5.5, 6.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("BlackScreen:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 5.5, 6.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("BlackScreen/Theme:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3, 3.5, 5, 5.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("BlackScreen/Wildcards:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.5, 4, 5, 5.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("BlackScreen/Logo:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1, 2, 2.5, 3 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("BlackScreen:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BlackScreen:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "clear"
tracks/0/type = "value"
tracks/0/path = NodePath("BlackScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlackScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.189944, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0.0774455, 0.0907219, 0.150466, 0.564246, 0.137255, 0.160784, 0.266667, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
fill_from = Vector2( 0, 1 )
fill_to = Vector2( 0, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.247059, 0.301961, 0.556863, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.913725, 0.913725, 0.913725, 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 5 )
primary_audio = ExtResource( 1 )
on_play_scene_path = "res://levels/level0/Level0.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OptionsPopUp" type="AnimationPlayer" parent="CanvasLayer"]
anims/RESET = SubResource( 6 )
anims/hide = SubResource( 7 )
anims/show = SubResource( 8 )

[node name="BobbingLogo" type="AnimationPlayer" parent="CanvasLayer"]
autoplay = "bob"
anims/RESET = SubResource( 10 )
anims/bob = SubResource( 11 )

[node name="Cards" type="AnimationPlayer" parent="CanvasLayer"]
autoplay = "cards"
anims/RESET = SubResource( 12 )
anims/cards = SubResource( 13 )
anims/clear = SubResource( 14 )

[node name="Space-bg" type="Sprite" parent="CanvasLayer"]
position = Vector2( 534.372, 299 )
scale = Vector2( 0.784, -0.784 )
texture = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 712.0
texture = SubResource( 2 )
expand = true

[node name="Luna-logo" type="Sprite" parent="CanvasLayer"]
position = Vector2( 519, 111 )
scale = Vector2( 0.104489, 0.104489 )
texture = ExtResource( 2 )

[node name="MenuButtons" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.02
anchor_top = 0.033
anchor_right = 0.02
anchor_bottom = 0.033
margin_left = 410.52
margin_top = 297.2
margin_right = 597.52
margin_bottom = 439.2
rect_clip_content = true
custom_constants/separation = 12

[node name="Play" type="Button" parent="CanvasLayer/MenuButtons"]
margin_right = 187.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_styles/normal = SubResource( 3 )
text = "Play"

[node name="Options" type="Button" parent="CanvasLayer/MenuButtons"]
margin_top = 42.0
margin_right = 187.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 30 )
custom_styles/normal = SubResource( 3 )
text = "Options"

[node name="Quit" type="Button" parent="CanvasLayer/MenuButtons"]
margin_top = 84.0
margin_right = 187.0
margin_bottom = 114.0
rect_min_size = Vector2( 0, 30 )
custom_styles/normal = SubResource( 3 )
text = "Quit"

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 567.0
margin_top = 329.0
margin_right = 717.0
margin_bottom = 349.0
rect_min_size = Vector2( 150, 20 )
custom_colors/font_color = Color( 0.184314, 0.184314, 0.184314, 1 )
custom_styles/normal = SubResource( 9 )
text = "In Development"
align = 1
valign = 1

[node name="PopUpTimer" type="Timer" parent="CanvasLayer"]
one_shot = true

[node name="BlackScreen" type="ColorRect" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.772549, 0.811765, 1, 1 )

[node name="Theme" type="Sprite" parent="CanvasLayer/BlackScreen"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 509, 130 )
scale = Vector2( 0.198223, 0.198223 )
texture = ExtResource( 7 )

[node name="Wildcards" type="Sprite" parent="CanvasLayer/BlackScreen"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 506, 401 )
scale = Vector2( 0.251735, 0.251735 )
texture = ExtResource( 4 )

[node name="Logo" type="Sprite" parent="CanvasLayer/BlackScreen"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 503, 298 )
scale = Vector2( 0.484371, 0.484371 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="CanvasLayer/BlackScreen"]
margin_left = 846.0
margin_top = 566.0
margin_right = 980.0
margin_bottom = 580.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press any key to skip..."

[connection signal="pressed" from="CanvasLayer/MenuButtons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuButtons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="CanvasLayer/PopUpTimer" to="." method="_on_PopUpTimer_timeout"]
